// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LocalizedHeader renders strings in **English** 1`] = `
<View
  accessibilityIgnoresInvertColors={true}
  style={
    Object {
      "backgroundColor": "#F3F3F3",
      "paddingBottom": 40,
      "paddingHorizontal": 32,
      "paddingTop": 96,
    }
  }
>
  <Image
    accessibilityRole="image"
    source={
      Object {
        "testUri": "../Libraries/NewAppScreen/components/logo.png",
      }
    }
    style={
      Array [
        Object {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        Object {
          "height": undefined,
          "width": undefined,
        },
        Object {
          "marginBottom": -192,
          "marginLeft": -128,
          "opacity": 0.2,
          "overflow": "visible",
          "resizeMode": "cover",
        },
      ]
    }
  />
  <Text
    style={
      Object {
        "color": "#000",
        "fontSize": 40,
        "fontWeight": "600",
        "textAlign": "center",
      }
    }
  >
    Welcome to React
  </Text>
</View>
`;

exports[`LocalizedHeader renders strings in **French** 1`] = `
<View
  accessibilityIgnoresInvertColors={true}
  style={
    Object {
      "backgroundColor": "#F3F3F3",
      "paddingBottom": 40,
      "paddingHorizontal": 32,
      "paddingTop": 96,
    }
  }
>
  <Image
    accessibilityRole="image"
    source={
      Object {
        "testUri": "../Libraries/NewAppScreen/components/logo.png",
      }
    }
    style={
      Array [
        Object {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        Object {
          "height": undefined,
          "width": undefined,
        },
        Object {
          "marginBottom": -192,
          "marginLeft": -128,
          "opacity": 0.2,
          "overflow": "visible",
          "resizeMode": "cover",
        },
      ]
    }
  />
  <Text
    style={
      Object {
        "color": "#000",
        "fontSize": 40,
        "fontWeight": "600",
        "textAlign": "center",
      }
    }
  >
    Bienvenue chez React
  </Text>
</View>
`;
